nats-micro/tests/ui/service_error_error_derive_conflict.stderr
error: #[service_error] already implements Display and Error; remove the Error derive
 --> tests/ui/service_error_error_derive_conflict.rs:4:10
  |
4 | #[derive(nats_micro::Error)]
  |          ^^^^^^^^^^^^^^^^^
