nats-micro/tests/ui/service_error_error_derive_conflict.rs
use nats_micro::service_error;

#[service_error]
#[derive(nats_micro::Error)]
pub enum DemoError {
    #[error("empty")]
    Empty,
}

fn main() {}
